Bug 166764 - When the option "Current Module Only" is active, no Recent Documents are shown in either Base submenu
Summary: When the option "Current Module Only" is active, no Recent Documents are show...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Base (show other bugs)
Version:
(earliest affected)
24.8.7.2 release
Hardware: x86-64 (AMD64) All
: medium normal
Assignee: Andreas Heinisch
URL:
Whiteboard: target:25.8.0
Keywords: regression
Depends on:
Blocks: Recent-Document-List
  Show dependency treegraph
 
Reported: 2025-05-28 14:43 UTC by Andreas Heinisch
Modified: 2025-05-30 08:45 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andreas Heinisch 2025-05-28 14:43:59 UTC
Description:
On every Base subview (Tables, Queries, Forms, and Reports) File -> Recent Documents shows "No Documents".

Same issue as for https://bugs.documentfoundation.org/show_bug.cgi?id=164794#c2

Actual Results:
 

Expected Results:
 


Reproducible: Always


User Profile Reset: No

Additional Info:
Version: 25.8.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 2fdb65e61ae8e18438d5fccd4d5f0aba5b86a6d8
CPU threads: 32; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Vulkan; VCL: win
Locale: de-DE (de_DE); UI: en-US
Calc: CL threaded
Comment 1 Robert Großkopf 2025-05-28 18:26:29 UTC
Could confirm the buggy behavior.
Recent Documents will only be shown in main document, not in sub documents.
This works well in LO 7.4.7.2. 
Fails in 
Version: 24.8.7.2 (X86_64) / LibreOffice Community
Build ID: e07d0a63a46349d29051da79b1fde8160bab2a89
CPU threads: 6; OS: Linux 6.4; UI render: default; VCL: kf5 (cairo+xcb)
Locale: de-DE (de_DE.UTF-8); UI: de-DE
Calc: threaded

So it's a regression.
Comment 2 Commit Notification 2025-05-30 08:45:03 UTC
Andreas Heinisch committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/08142e65f772d1bf42b4740b0f70ca897bdbaa0e

tdf#166764 - Show list of recent documents in Base subdialogs

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.