tdf#166764 - Show list of recent documents in Base subdialogs

Change-Id: I6ec809a739e07053872d1a4050bbcfea4b142e53
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/186004
Tested-by: Jenkins
Reviewed-by: Andreas Heinisch <andreas.heinisch@yahoo.de>